# ssb-sqlite3

./: .gitignore  CMakeLists.txt  README.md  bloom.c
analysis/: analysis.py
analysis/data/: sum_times.csv  times.csv
analysis/data/profiles/: q1.1.txt  q1.2.txt  q1.3.txt  q2.1.txt  q2.2.txt  q2.3.txt  q3.1.txt  q3.2.txt  q3.3.txt  q3.4.txt  q4.1.txt  q4.2.txt  q4.3.txt  qdecomposed.txt  qreordered.txt  qstandard.txt
queries/: q1_1_bf.sql  q1_2_bf.sql  q1_3_bf.sql  q2_1_bf.sql  q2_2_bf.sql  q2_3_bf.sql  q3_1_bf.sql  q3_2_bf.sql  q3_3_bf.sql  q3_4_bf.sql  q4_1_bf.sql  q4_2_bf.sql  q4_3_bf.sql
